# tcp_test

./: CMakeLists.txt  LICENSE
src/: CMakeLists.txt  myclient.h  myserverthread.cpp
tcp_test/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  myclient.cpp  myserver.cpp  myserver.h  myserverthread.cpp  myserverthread.h
udp_test/: CMakeLists.txt  MyReaderThread.cpp  MyReaderThread.h  MyReaderThreadObject.cpp  MyReaderThreadObject.h  MyUdpClient.cpp  MyUdpClient.h  MyUdpServer.cpp  MyUdpServer.h  MyWriterThread.cpp  MyWriterThread.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
